# ollama-playwright-automation

./: .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  oapw_executive_presentation.pptx  pyproject.toml
.github/workflows/: ci.yml  oapw.yml  self-eval.yml
docs/: architecture.md  cli-reference.md  code-ingestion.md  configuration.md  development.md  knowledge-base.md  self-healing.md  setup.md
examples/: conftest.py  test_login_flow.py  test_qa_agent_example.py
scripts/: build_exec_ppt.py
src/oapw/: __init__.py
src/oapw/agents/: __init__.py  executor.py  hooks.py  locator_resolver.py  loop_guard.py  models.py  planner.py  runner.py
src/oapw/cache/: __init__.py  l1_memory.py  l2_disk.py  l3_semantic.py  manager.py
src/oapw/cli/: __init__.py  main.py
src/oapw/core/: __init__.py  ai_page.py  aom.py  browser.py  config.py  dom.py  ollama_client.py
src/oapw/enterprise/: atlassian_client.py  code_ingest.py  code_parser.py  confluence_ingest.py  jira_ingest.py  traceability.py  weighting.py
src/oapw/eval/: __init__.py  golden_pages.py  golden_suite.py  (+1 more)
tests/: conftest.py
tests/eval/: conftest.py  test_golden_self_eval.py
tests/unit/: test_agent_models.py  test_aom.py  test_atlassian_client.py  test_browser.py  test_cache.py  test_code_parser.py  test_config.py  test_dom.py  test_factories.py  test_fingerprint.py  test_generators.py  test_healing_strategies.py  test_hybrid.py  test_knowledge.py  test_l3_cache.py  test_metrics.py  test_ollama_client.py  test_pii.py  test_plugin_fixtures.py  test_prompts.py  test_qa_agent.py  test_runner.py  test_traceability.py  test_verification.py  test_weighting.py
(+53 files in other folders)
