[tool.poetry]
name = "oapw"
version = "0.1.0"
description = "Local-first AI quality engineering platform — Playwright + Ollama + self-healing locators + QA Agent"
authors = ["Achal Joshi <achaljoshi@example.com>"]
readme = "README.md"
packages = [{ include = "oapw", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44"
httpx = "^0.27"
pydantic = "^2.7"
pydantic-settings = "^2.3"
cachetools = "^5.3"
rich = "^13.7"
typer = "^0.12"
keyring = "^25.2"
jinja2 = "^3.1"
chromadb = {version = "^0.5", optional = true}
allure-pytest = {version = "^2.13", optional = true}
Pillow = {version = "^10.0", optional = true}

[tool.poetry.extras]
knowledge = ["chromadb"]
allure = ["allure-pytest"]
visual = ["Pillow"]
full = ["chromadb", "allure-pytest", "Pillow"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
black = "^24.4"

[tool.poetry.scripts]
oapw = "oapw.cli.main:app"

[tool.poetry.plugins."pytest11"]
oapw = "oapw.plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
